[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pristinizer"
version = "0.1.0"
description = "Automatic data cleaning and EDA package"
authors = [
  {name = "Harmanpreet Singh", email = "harmanbajwa012005@gmail.com"}
]
dependencies = [
  "pandas",
  "matplotlib",
  "seaborn"
]
requires-python = ">=3.8"
