[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pristinizer"
version = "0.1.0"
description = "Automatic data cleaning, EDA, and missing data visualization for pandas DataFrames"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
    {name = "Harmanpreet Singh", email = "harmanbajwa012005@gmail.com"}
]

keywords = [
    "data cleaning",
    "data preprocessing",
    "EDA",
    "machine learning",
    "data science",
    "pandas",
    "missing values"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


dependencies = [
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0"
]


[project.urls]
Repository = "https://github.com/harmanbajwa2954/Pristinizer-pyProject.git"


[tool.setuptools.packages.find]
where = ["."]
include = ["pristinizer*"]
